# cthulhu

./: .gitignore  README.md  docker-compose.yml
apps/backend/: .env.example  Dockerfile  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/app/: main.py
apps/backend/app/api/: gateway.py  health.py
apps/backend/app/core/: config.py  logging.py
apps/backend/app/db/: __init__.py  session.py
apps/backend/app/gateway/: __init__.py  dispatcher.py
apps/backend/app/middleware/: __init__.py  request_id.py
apps/backend/app/proxy/: client.py
apps/backend/app/routing/: __init__.py  exceptions.py  models.py  registry.py  resolver.py
